SWAGGER => Ajout d'un utilisateur
